<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="save">Save</string>
    <string name="ip_address">IP Address</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="ride_now">Ride Now</string>
    <string name="ride_later">Ride Later</string>
    <string name="share_with_public">Share with Public</string>
    <string name="share_with_contact">Share with Private</string>
    <string name="share_ride">Share Ride</string>
    <string name="app_name">Slider Menu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="book_ride">Book A Ride</string>
    <string name="search_ride">Search A Ride</string>
    <string name="message">Message</string>
    <string name="settings">Settings</string>
    <string name="ride_request_sent">Request Sent Successfully !!</string>
    <string name="error_responce">Something went wrong!! Try Again in a while</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>@string/book_ride</item>
        <item>@string/search_ride</item>
        <item>@string/message</item>
        <item>@string/settings</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_photos</item>
        <!--
            <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
        -->
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

</resources>